--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
   },
+  "homepage": "https://dimawawri.github.io/<appdev1-midterm-exam>/" ,
+
   "devDependencies": {
     "@eslint/js": "^9.36.0",
     "@types/react": "^19.1.16",
@@ -21,6 +23,7 @@
     "eslint": "^9.36.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.22",
+    "gh-pages": "^6.3.0",
     "globals": "^16.4.0",
     "vite": "^7.1.7"
   }
