Add deploy scripts and homepage

--- a/package.json
+++ b/package.json
@@ -7,14 +7,15 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+     "predeploy": "npm run build",
+  "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
   },
-  "homepage": "https://dimawawri.github.io/<appdev1-midterm-exam>/" ,
-
+  "homepage": "https://dimawawri.github.io/<appdev1-midterm-exam>/",
   "devDependencies": {
     "@eslint/js": "^9.36.0",
     "@types/react": "^19.1.16",
